-Config example file -DailyQuote Exception to account for Gemini API hitting a daily limit instead of the regular rate limit exception -Changed GeminiClient to account for rate limit exception changes, Corrected the silent error of  not releasing a thread if anything goes wrong. -Added an interface to enable saving to each batch after it's completed and not after the full run is done -added a check to see if csv file is empty and to append if yes instead of overwriting -moved csvWriter call in Main so each batch gets written after it's evaluated. This is to prevent progress loss in case of a crash